networking/external-to-internal/echoserver.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echoserver-deploy
spec:
  replicas: 2
  selector:
    matchLabels:
      app: echo
  template:
    metadata:
      labels:
        app: echo
    spec:
      containers:
      - name: my-echo
        image: gcr.io/google_containers/echoserver:1.8
        imagePullPolicy: IfNotPresent
        resources:
          limits:
            memory: "28Mi"
            cpu: "50m"
---
apiVersion: v1
kind: Service
metadata:
  name: echoserver-svc
spec:
  selector:
    app: echo
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
